--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 18 14:10:38 CDT 2016
-sdk.dir=C\:\\Users\\Hellen Rojas\\AppData\\Local\\Android\\Sdk
+#Thu Jul 21 15:52:51 CST 2016
+sdk.dir=C\:\\Android\\sdk1
