--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:debuggable="true"
         android:theme="@style/AppTheme">
         <activity android:name=".UI.RecorderActivity" />
+        <activity android:name=".UI.AddWords"/>
         <activity android:name=".UI.TranslatorActivity">
 
         </activity>
